# langchain-collapse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: benchmark.py
langchain_collapse/: __init__.py
tests/: conftest.py  test_collapse.py  test_properties.py
